add user model, controller, generate jwt access_token and refresh_token when register

--- a/config/dev.env
+++ b/config/dev.env
@@ -1,2 +1,4 @@
-PORT=8080
+PORT=3000
 MONGOOSE_CONNECTION_URL=mongodb://127.0.0.1:27017/euro2020
+ACCESS_TOKEN_SECRET=abcd1234
+REFRESH_TOKEN_SECRET=xxxxxxxs
