--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/mongodb": "^3.6.19",
     "@types/node": "^16.0.0",
     "env-cmd": "^10.1.0",
@@ -20,7 +22,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
     "winston": "^3.3.3"
