--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "esModuleInterop": true,                        /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "resolveJsonModule": true,                      /* Include modules imported with '.json' extension */
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
+    "typeRoots": [
+      "src/types/express-auth-middleware.d.ts","node_modules/@types"
+    ],
   }
 }
