rename definitions types file, using same structure with definition types file in node_modules/@types/ directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
     "typeRoots": [
-      "src/types/express-auth-middleware.d.ts","node_modules/@types"
+      "./src/types",
+      "./node_modules/@types",
     ],
   }
 }
