--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build/app.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon"
+    "start": "node ./build/server.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +14,16 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongodb": "^3.6.19",
     "@types/node": "^15.6.1",
+    "@types/supertest": "^2.0.11",
     "env-cmd": "^10.1.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.9",
+    "supertest": "^6.1.4",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
