--- a/config/dev.env
+++ b/config/dev.env
@@ -1,4 +1,6 @@
 PORT=3000
 MONGOOSE_CONNECTION_URL=mongodb://127.0.0.1:27017/euro2020
 ACCESS_TOKEN_SECRET=abcd1234
+ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=xxxxxxxs
+REFRESH_TOKEN_EXPIRY=10d
