--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongodb": "^3.6.19",
+    "@types/multer": "^1.4.7",
     "@types/node": "^15.6.1",
+    "@types/sharp": "^0.28.5",
     "@types/supertest": "^2.0.11",
     "env-cmd": "^10.1.0",
     "jest": "^27.0.6",
@@ -33,6 +35,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.3",
+    "sharp": "^0.28.3",
     "winston": "^3.3.3"
   }
 }
