add default width and height for sharp resize

--- a/config/dev.env
+++ b/config/dev.env
@@ -4,3 +4,5 @@ ACCESS_TOKEN_SECRET=abcd1234
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=xxxxxxxs
 REFRESH_TOKEN_EXPIRY=10d
+DEFAULT_IMAGE_WIDTH=300
+DEFAULT_IMAGE_HEIGHT=300
