--- a/config/dev.env
+++ b/config/dev.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT=3000
 MONGOOSE_CONNECTION_URL=mongodb://127.0.0.1:27017/euro2020
 ACCESS_TOKEN_SECRET=abcd1234
@@ -6,4 +7,6 @@ REFRESH_TOKEN_SECRET=xxxxxxxs
 REFRESH_TOKEN_EXPIRY=10d
 DEFAULT_IMAGE_WIDTH=300
 DEFAULT_IMAGE_HEIGHT=300
-NODE_ENV=development
+DEFAULT_IMAGE_SIZE_LIMIT=5242880
+ACCEPT_IMAGE_EXTENSION_PATTERN=^(\.)?(jpg|jpeg|png|gif|tiff)$
+TEMP_FILE_DIR=uploads/temp/
