--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mongodb": "^3.6.19",
     "@types/multer": "^1.4.7",
     "@types/node": "^15.6.1",
+    "@types/node-cron": "^2.0.4",
     "@types/sharp": "^0.28.5",
     "@types/supertest": "^2.0.11",
     "env-cmd": "^10.1.0",
@@ -38,6 +39,7 @@
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
     "multer": "^1.4.3",
+    "node-cron": "^3.0.0",
     "sharp": "^0.28.3",
     "winston": "^3.3.3"
   }
