add constant related to entities' name

--- a/config/dev.env
+++ b/config/dev.env
@@ -9,4 +9,7 @@ DEFAULT_IMAGE_WIDTH=300
 DEFAULT_IMAGE_HEIGHT=300
 DEFAULT_IMAGE_SIZE_LIMIT=5242880
 ACCEPT_IMAGE_EXTENSION_PATTERN=^(\.)?(jpg|jpeg|png|gif|tiff)$
-TEMP_FILE_DIR=uploads/temp/
+UPLOAD_FILE_DIR=uploads/
+UPLOAD_TEMP_FILE_DIR=uploads/temp/
+ENTITY_TEAMS=teams
+ENTITY_USERS=users
