--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "multer": "^1.4.3",
     "node-cron": "^3.0.0",
     "sharp": "^0.28.3",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yup": "^0.32.9"
   }
 }
