--- a/config/test.env
+++ b/config/test.env
@@ -1,3 +1,5 @@
+NODE_ENV=testing
+ENABLE_LOGGING=false
 PORT=3000
 MONGOOSE_CONNECTION_URL=mongodb://127.0.0.1:27017/euro2020-test
 ACCESS_TOKEN_SECRET=1234abcd
@@ -6,3 +8,9 @@ REFRESH_TOKEN_SECRET=asdaasw.
 REFRESH_TOKEN_EXPIRY=10d
 DEFAULT_IMAGE_WIDTH=300
 DEFAULT_IMAGE_HEIGHT=300
+DEFAULT_IMAGE_SIZE_LIMIT=5242880
+ACCEPT_IMAGE_EXTENSION_PATTERN=^(\.)?(jpg|jpeg|png|gif|tiff)$
+UPLOAD_FILE_DIR=src/tests/fixtures/images/
+UPLOAD_TEMP_FILE_DIR=src/tests/fixtures/images/temp/
+ENTITY_TEAMS=teams
+ENTITY_USERS=users
