add ignoreFileNames to removeOldTempFiles function as list of file name that should be ignored from deleting

--- a/config/dev.env
+++ b/config/dev.env
@@ -11,5 +11,6 @@ DEFAULT_IMAGE_SIZE_LIMIT=5242880
 ACCEPT_IMAGE_EXTENSION_PATTERN=^(\.)?(jpg|jpeg|png|gif|tiff)$
 UPLOAD_FILE_DIR=uploads/
 UPLOAD_TEMP_FILE_DIR=uploads/temp/
+OLD_TEMP_FILE_IGNORE_LIST=.gitignore
 ENTITY_TEAMS=teams
 ENTITY_USERS=users
