--- a/config/test.env
+++ b/config/test.env
@@ -12,5 +12,6 @@ DEFAULT_IMAGE_SIZE_LIMIT=5242880
 ACCEPT_IMAGE_EXTENSION_PATTERN=^(\.)?(jpg|jpeg|png|gif|tiff)$
 UPLOAD_FILE_DIR=src/tests/fixtures/images/
 UPLOAD_TEMP_FILE_DIR=src/tests/fixtures/images/temp/
+OLD_TEMP_FILE_IGNORE_LIST=.gitignore,england.jpg
 ENTITY_TEAMS=teams
 ENTITY_USERS=users
