--- a/config/test.env
+++ b/config/test.env
@@ -15,3 +15,5 @@ UPLOAD_TEMP_FILE_DIR=src/tests/fixtures/images/temp/
 OLD_TEMP_FILE_IGNORE_LIST=.gitignore,england.jpg
 ENTITY_TEAMS=teams
 ENTITY_USERS=users
+PAGINATION_DEFAULT_LIMIT=10
+PAGINATION_DEFAULT_PAGE=1
