--- a/config/dev.env
+++ b/config/dev.env
@@ -1,10 +1,10 @@
 NODE_ENV=development
-PORT=3000
+PORT=3001
 MONGOOSE_CONNECTION_URL=mongodb://127.0.0.1:27017/euro2020
 ACCESS_TOKEN_SECRET=abcd1234
-ACCESS_TOKEN_EXPIRY=1d
+ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_SECRET=xxxxxxxs
-REFRESH_TOKEN_EXPIRY=10d
+REFRESH_TOKEN_EXPIRY=30d
 DEFAULT_IMAGE_WIDTH=300
 DEFAULT_IMAGE_HEIGHT=300
 DEFAULT_IMAGE_SIZE_LIMIT=5242880
