--- a/config/dev.env
+++ b/config/dev.env
@@ -14,6 +14,7 @@ UPLOAD_TEMP_FILE_DIR=uploads/temp/
 OLD_TEMP_FILE_IGNORE_LIST=.gitignore
 ENTITY_TEAMS=teams
 ENTITY_USERS=users
+ENTITY_TOURNAMENTS=tournament
 PAGINATION_DEFAULT_LIMIT=10
 PAGINATION_DEFAULT_PAGE=1
 
