--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 NODE_ENV=development
+ENABLE_LOGGING=true
 PORT=3001
 MONGOOSE_CONNECTION_URL=mongodb://127.0.0.1:27017/euro2020
 ACCESS_TOKEN_SECRET=abcd1234
