--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./build/server.js",
-    "dev": "env-cmd -f .env.development nodemon",
-    "test": "env-cmd -f .env.test jest --watch --runInBand"
+    "dev": "nodemon",
+    "test": "jest --watch --runInBand --setupFiles dotenv/config"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +36,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-type": "^16.5.3",
     "jsonwebtoken": "^8.5.1",
